# vane

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env.production.example  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
vane/: __main__.py  scheduler.py
vane/api/: lifespan.py  main.py
vane/api/routers/: markets.py  positions.py  signals.py  trading.py  weather.py
vane/core/: config.py  secrets.py
vane/db/: engine.py  models.py
vane/markets/: polymarket_client.py
vane/telegram/: bot.py
vane/trading/: executor.py  signals.py
vane/weather/: openmeteo.py
