[project]
name = "vane"
version = "0.1.0"
description = "Polymarket weather trading bot with Telegram integration"
requires-python = ">=3.11"
authors = [{name = "Vane Team"}]
dependencies = [
    # API & web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",

    # Scheduling
    "apscheduler>=3.10",

    # Telegram
    "python-telegram-bot>=21.0",

    # Polymarket (pinned to working commit; update when upstream fixes packaging)
    "polymarket-client@git+https://github.com/Polymarket/py-sdk.git@3a5615f279058df1ba98b77948a03ff13f0be4ab",

    # Weather & math
    "requests>=2.32",
    "scipy>=1.14",
    "numpy>=2.0",

    # Configuration & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",

    # Secrets
    "infisicalsdk>=1.0",

    # Utilities
    "aiofiles>=24.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
